# zoomhub

./: .editorconfig  .env.template  .gitattributes  .gitignore  .stylish-haskell.yaml  .travis.yml  API-v2.md  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HLint.hs  LICENSE  Main.hs  PG.hs  README.md  ZoomHub.hs  ansible.cfg  app._coffee  cabal.config  circle.yml  config.coffee  hie.yaml  package-lock.json  package.json  server.js  snowpack.config.mjs  stack.yaml  tailwind.config.js  zh  zoomhub.cabal  zoomhub.code-workspace  zoomhub.sublime-project
.circleci/: config.yml  config.yml.bak
.github/workflows/: web-build-and-test.yml  zoomhub.yml
Types/: Content.hs  DeepZoomImage.hs
ZoomHub/: API.hs  Config.hs  Storage.hs
ZoomHub/Rackspace/: CloudFiles.hs
ZoomHub/Types/: Content.hs  DeepZoomImage.hs
ZoomHub/Types/Internal/: Content.hs  ContentId.hs  DeepZoomImage.hs
app/: Main.hs  MigrateDatabase.hs
archive/: h.js  h.json
config/: keter.yaml  keter.yml
data/: content-development.sqlite3  test.db  zoomhub-development.sqlite3  zoomhub_data.sql  zoomhub_sequences.sql  zoomhub_test-pg-backup-2017-03-04.sql  zoomhub_test-pg-dump-2019-10-16-1-schema.sql  zoomhub_test-pg-dump-2019-10-16-2-data.sql
data/content-by-id/: 100.json  100_U.json  4rcn.json  README.md  h.json  hdfm.json
data/content-by-url/: README.md  data.json  init
deployment/: README.md  bootstrap.yml  copy-build-artifacts.sh  deploy.sh  deploy.yml  hosts.sample  keter-bundle.sh  requirements.yml  secrets.vault.yml  setup.yml  site.yml
deployment/credentials/: userpassword.sample
deployment/group_vars/: webservers.yml
design/: zoomhub.sketch
docs/proposals/: API-v2.md
frontend/: .gitignore  package-lock.json  package.json  snowpack.config.mjs  tailwind.config.js
frontend-nextjs/: package-lock.json  package.json
frontend-nextjs/pages/: [contentId].js  _app.js
frontend/public/: 404.html  humans.txt  index-vanilla.html  index.html
frontend/src/: index.tsx
frontend/src/components/: Create.tsx
frontend/src/lib/: Error.ts  submitFile.ts
frontend/src/types/: PresignedPOSTData.ts
frontend/styles/: global.css
lib/: content._coffee  dziparser._coffee  embed._coffee  errors._coffee  fetcher._coffee  processor._coffee  routes._coffee  worker._coffee
lib/util/: storageClient._coffee
migrations/: TEST-content_hash_id_trigger.psql
node/: LICENSE  app._coffee  package-lock.json  package.json  server.js
node/lib/: dziparser._coffee  worker._coffee
node/public/: index.html  presigned-post.js  presigned-url.js  queued.dzi
node/public/style/: main.less
node/scripts/: convert._coffee  mark-complete.js
node/test/: api._coffee
node/test/fixtures/: ids._coffee
node/views/: view.jade
ops/: .vault_pass.sample.txt  CHANGELOG.md  README.md  admin  admin.yml  bootstrap.yml  common.yml  database.yml  database_aws_rds.yml  deploy.sh  hosts-staging  keter-bundle.sh  migrate-database.sh  production  reboot.yml  requirements.yml  secrets.vault.yml  staging  user.yml  vars.default.yml  web.yml
ops/aws/: Dockerfile.deploy  Dockerrun.aws.json.template  bingo.sh  bucket-policy.json  build-web.sh  deploy-processContent.sh  deploy-web.sh  deploy.sh  run.sh  setup.sh
ops/aws/.ebextensions/: 00_container_commands.config  10_nginx_https.config  https.config  nginx.config  single_instance.config
ops/group_vars/: all.yml  server.yml
ops/queries/: top-content-by-size.sql
ops/ssh/: circleci_deploy.id_rsa.pub  gasi-imac.id_rsa.pub  gasi-macbook-pro-2014.id_rsa.pub  gasi-macbook-pro-2015.id_rsa.pub  gasi-macbook-pro-2018.id_rsa.pub
pipeline/fetcher/: README
process-content/: .gitignore  Makefile  index.js  invoke.js  package-lock.json  package.json
process-content/lib/: ClientError.js
public/: 404.html  humans.txt  index.html
public/dzi/: README
public/source/: README
public/style/: main.less
reports/: top-content-by-size.sql
resources/aws/s3/: ABOUT.txt
resources/rackspace/cloudfiles/: ABOUT.txt
resources/templates/: view.html
scripts/: backup-content.sh  check-dzi-uploads.sh  compare-db.sql  content-urls._coffee  convert-production-to-development-db.sql  create-content-info.sql  create-content-table.sql  create-db.sql  create-url-index.sh  data-by-urls._coffee  delete-cloudfiles-cache.sh  delete-cloudfiles-static.sh  dump-postgresql.sh  import-csv-sqlite3.sh  import-csv.hs  import-missing.sh  import-sqlite-schema-to-psql.sh  legacy-db-analysis.sql  load-database.js  lock  migrate-cloudfiles-to-s3-admin.sh  migrate-cloudfiles-to-s3-archive.sh  migrate-cloudfiles-to-s3-cache.sh  migrate-cloudfiles-to-s3-static.sh  migrate-cloudfiles-to-s3.sh  migrate-content._coffee  migrate-legacy-schema-01-content.sql  migrate-legacy-schema-02-image.sql  migrate-legacy-schema-03-flickr.sql  migrate-legacy-schema-04-normalize-columns.sql  migrate-legacy-schema-05-fix-mime.sql  migrate-legacy-schema-06-drop-legacy-tables.sql  migrate-legacy-schema.sql  migrate-postgresql-local-to-aws-rds.sh  migrate-sqlite-to-pg-production.sh  migrate-sqlite-to-pg.sh  normalize-data._coffee  normalize-db.hs  normalize-mime.hs  reset-db.sh  (+12 more)
scripts/importer/: blob-loader.js  cloud-app.js  dzi-loader.js  id-loader.js  import-id.js  import.js  logging.js  populate-queue.js
src/: DevelMain.hs  tiler._coffee
src/Network/URI/: Instances.hs
src/URI/ByteString/: Instances.hs
src/ZoomHub/: API.hs  AWS.hs  Authentication.hs  Config.hs  Debug.hs  Email.hs  Logger.hs  Main.hs  Pipeline.hs  Utils.hs  Worker.hs
src/ZoomHub/API/: ContentTypes.hs  Cookie.hs  Errors.hs
src/ZoomHub/AWS/: S3.hs
src/ZoomHub/Authentication/: Basic.hs  Cookie.hs  OAuth.hs  Session.hs
src/ZoomHub/Config/: AWS.hs  Kinde.hs  ProcessContent.hs  Uploads.hs
src/ZoomHub/Email/: Verification.hs
src/ZoomHub/Log/: LogLevel.hs  Logger.hs  RequestLogger.hs
src/ZoomHub/Rackspace/: CloudFiles.hs
test/: api._coffee  mocha.opts  ui._coffee
test/fixtures/: ids._coffee  urls._coffee
tests/: Spec.hs  Tests.hs
tests/ZoomHub/: APISpec.hs  AWSSpec.hs  StorageTest.hs  payload.txt
views/: home.jade  view.jade
(+163 files in other folders)
