name:                zoomhub
version:             0.0.5.0
synopsis:            Share and view high-resolution images effortlessly.
description:         Please see README.md
homepage:            http://github.com/zoomhub/zoomhub#readme
license:             MIT
license-file:        LICENSE
author:              ZoomHub
maintainer:          zoomhub@googlegroups.com
copyright:           2013–2016 ZoomHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
bug-reports:         http://github.com/zoomhub/zoomhub/issues
source-repository head
  type: git
  location: http://github.com/zoomhub/zoomhub.git

library
  exposed-modules:
      ZoomHub.API
    , ZoomHub.API.ContentTypes.JavaScript
    , ZoomHub.API.Errors
    , ZoomHub.API.JSONP.Errors
    , ZoomHub.API.Types.Callback
    , ZoomHub.API.Types.Content
    , ZoomHub.API.Types.DeepZoomImage
    , ZoomHub.API.Types.JSONP
    , ZoomHub.API.Types.NonRESTfulResponse
    , ZoomHub.Config
    , ZoomHub.Log.Logger
    , ZoomHub.Log.RequestLogger
    , ZoomHub.Main
    , ZoomHub.Pipeline
    , ZoomHub.Rackspace.CloudFiles
    , ZoomHub.Servant.RawCapture
    , ZoomHub.Servant.RequiredQueryParam
    , ZoomHub.Storage.SQLite
    , ZoomHub.Types.BaseURI
    , ZoomHub.Types.Content
    , ZoomHub.Types.ContentBaseURI
    , ZoomHub.Types.ContentId
    , ZoomHub.Types.ContentMIME
    , ZoomHub.Types.ContentState
    , ZoomHub.Types.ContentType
    , ZoomHub.Types.ContentURI
    , ZoomHub.Types.DatabasePath
    , ZoomHub.Types.DeepZoomImage
    , ZoomHub.Types.StaticBaseURI
    , ZoomHub.Utils
    , ZoomHub.Web.Errors
    , ZoomHub.Web.Static
    , ZoomHub.Web.Types.Embed
    , ZoomHub.Web.Types.EmbedDimension
    , ZoomHub.Web.Types.EmbedId
    , ZoomHub.Web.Types.OpenSeadragonTileSource
    , ZoomHub.Web.Types.OpenSeadragonViewerConfig
    , ZoomHub.Web.Types.ViewContent
    , ZoomHub.Worker
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  build-depends:
      aeson == 0.10.*
    , aeson-casing == 0.1.*
    , aeson-pretty
    , async == 2.1.0
    , atomic-write
    , base >= 4.8 && < 5
    , blaze-builder
    , bytestring
    , case-insensitive
    , cassava
    , containers
    , cryptonite == 0.10.*
    , data-default
    , direct-sqlite
    , directory == 1.2.5.1
    , either
    , envy
    , fast-logger
    , filepath
    , hashids
    , http-client
    , http-media
    , http-types
    , iproute
    , lens == 4.13.*
    , lens-aeson == 1.*
    , lucid
    , mime
    , network
    , network-uri
    , process
    , random
    , safe
    , servant == 0.4.4.6
    , servant-lucid == 0.4.4.5
    , servant-server == 0.4.4.6
    , sqlite-simple
    , stm
    , string-conversions
    , temporary
    , text
    , time
    , transformers
    , unix
    , unordered-containers
    , utf8-string
    , wai
    , wai-app-static
    , wai-cors
    , wai-extra
    , warp
    , wreq == 0.4.*
    , xml

executable zoomhub
  default-language: Haskell2010
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
      base
    , zoomhub

executable normalize-db
  default-language: Haskell2010
  ghc-options:      -Wall
  main-is:          scripts/normalize-db.hs
  build-depends:
      base
    , mime
    , sqlite-simple
    , text
    , time

test-suite tests
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   tests
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  other-modules:
    ZoomHub.APISpec
    ZoomHub.Types.ContentIdSpec
    ZoomHub.Types.ContentURISpec
  build-depends:
      aeson
    , base
    , bytestring
    , data-default
    , hspec == 2.*
    , hspec-wai
    , http-types
    , network-uri
    , QuickCheck
    , quickcheck-instances
    , servant-server
    , sqlite-simple
    , text
    , wai
    , zoomhub
