name:                zoomhub
version:             2.0.0.0
synopsis:            Share and view high-resolution images effortlessly.
description:         Please see README.md
homepage:            http://github.com/zoomhub/zoomhub#readme
license:             MIT
license-file:        LICENSE
author:              ZoomHub
maintainer:          zoomhub@googlegroups.com
copyright:           2013–2016 ZoomHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
bug-reports:         http://github.com/zoomhub/zoomhub/issues
source-repository head
  type: git
  location: http://github.com/zoomhub/zoomhub.git

library
  exposed-modules:
      Data.Time.Units.Instances
    , Database.PostgreSQL.Simple.Instances
    , Network.HTTP.Client.Instances
    , Network.URI.Instances
    , ZoomHub.API
    , ZoomHub.API.ContentTypes.JavaScript
    , ZoomHub.API.Errors
    , ZoomHub.API.JSONP.Errors
    , ZoomHub.API.Types.Callback
    , ZoomHub.API.Types.Content
    , ZoomHub.API.Types.DeepZoomImage
    , ZoomHub.API.Types.JSONP
    , ZoomHub.API.Types.NonRESTfulResponse
    , ZoomHub.Config
    , ZoomHub.Log.Logger
    , ZoomHub.Log.RequestLogger
    , ZoomHub.Main
    , ZoomHub.Pipeline
    , ZoomHub.Rackspace.CloudFiles
    , ZoomHub.Servant.RawCapture
    , ZoomHub.Servant.RequiredQueryParam
    , ZoomHub.Storage.PostgreSQL2
    , ZoomHub.Storage.PostgreSQL2.Internal
    , ZoomHub.Storage.PostgreSQL2.Schema
    , ZoomHub.Storage.SQLite
    , ZoomHub.Types.BaseURI
    , ZoomHub.Types.Content
    , ZoomHub.Types.Content.Internal
    , ZoomHub.Types.ContentBaseURI
    , ZoomHub.Types.ContentId
    , ZoomHub.Types.ContentMIME
    , ZoomHub.Types.ContentState
    , ZoomHub.Types.ContentType
    , ZoomHub.Types.ContentURI
    , ZoomHub.Types.DatabasePath
    , ZoomHub.Types.DeepZoomImage
    , ZoomHub.Types.DeepZoomImage.TileFormat
    , ZoomHub.Types.DeepZoomImage.TileOverlap
    , ZoomHub.Types.DeepZoomImage.TileSize
    , ZoomHub.Types.StaticBaseURI
    , ZoomHub.Types.TempPath
    , ZoomHub.Utils
    , ZoomHub.Web.Errors
    , ZoomHub.Web.Static
    , ZoomHub.Web.Types.Embed
    , ZoomHub.Web.Types.EmbedDimension
    , ZoomHub.Web.Types.EmbedId
    , ZoomHub.Web.Types.OpenSeadragonTileSource
    , ZoomHub.Web.Types.OpenSeadragonViewerConfig
    , ZoomHub.Web.Types.ViewContent
    , ZoomHub.Worker
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  build-depends:
      aeson
    , aeson-casing
    , aeson-pretty
    , async
    , atomic-write
    , base
    , blaze-builder
    , bytestring
    , case-insensitive
    , containers
    , data-default
    , directory
    , enclosed-exceptions
    , envy
    , exceptions
    , fast-logger
    , filepath
    , generics-sop
    , hashids
    , http-api-data
    , http-client
    , http-media
    , http-types
    , iproute
    , lens
    , lens-aeson
    , lucid
    , mime
    , monad-control
    , mtl
    , network
    , network-uri
    , opaleye
    , postgresql-simple
    , process
    , product-profunctors
    , random
    , raw-strings-qq
    , resource-pool
    , retry
    , safe
    , servant
    , servant-lucid
    , servant-server
    , split
    , sqlite-simple
    , squeal-postgresql
    , string-conversions
    , temporary
    , text
    , time
    , time-units
    , timeit
    , transformers-base
    , unix
    , unordered-containers
    , utf8-string
    , wai
    , wai-app-static
    , wai-cors
    , wai-extra
    , warp
    , wreq
    , xml

executable zoomhub
  default-language: Haskell2010
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
      base
    , zoomhub

test-suite tests
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   tests
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  other-modules:
    ZoomHub.APISpec
    ZoomHub.Storage.PostgreSQL2Spec
    ZoomHub.Types.ContentIdSpec
    ZoomHub.Types.ContentURISpec
    ZoomHub.Types.DeepZoomImageSpec
  build-depends:
      aeson
    , base
    , bytestring
    , generics-sop
    , hspec == 2.*
    , hspec-wai
    , http-types
    , network-uri
    , postgresql-simple
    , process
    , QuickCheck
    , quickcheck-instances
    , resource-pool
    , servant-server
    , squeal-postgresql
    , text
    , time
    , time-units
    , wai
    , zoomhub
