name:                zoomhub
version:             3.0.0.2
synopsis:            Share and view full-resolution images easily
description:         Please see README.md
homepage:            http://github.com/zoomhub/zoomhub#readme
license:             MIT
license-file:        LICENSE
author:              ZoomHub
maintainer:          zoomhub@googlegroups.com
copyright:           2013–2021 ZoomHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
bug-reports:         http://github.com/zoomhub/zoomhub/issues
source-repository head
  type: git
  location: http://github.com/zoomhub/zoomhub.git

library
  exposed-modules:
      Data.Time.Units.Instances
    , Database.PostgreSQL.Simple.Instances
    , Network.HTTP.Client.Instances
    , Network.URI.Instances
    , ZoomHub.API
    , ZoomHub.API.ContentTypes.JavaScript
    , ZoomHub.API.Errors
    , ZoomHub.API.JSONP.Errors
    , ZoomHub.API.Types.Callback
    , ZoomHub.API.Types.Config
    , ZoomHub.API.Types.Content
    , ZoomHub.API.Types.ContentCompletion
    , ZoomHub.API.Types.DeepZoomImage
    , ZoomHub.API.Types.DeepZoomImageWithoutURL
    , ZoomHub.API.Types.JSONP
    , ZoomHub.API.Types.NonRESTfulResponse
    , ZoomHub.Authentication.Basic
    , ZoomHub.Authentication.OAuth
    , ZoomHub.Authentication.OAuth.Kinde
    , ZoomHub.AWS
    , ZoomHub.AWS.S3
    , ZoomHub.AWS.S3.POSTPolicy
    , ZoomHub.AWS.S3.POSTPolicy.Condition
    , ZoomHub.AWS.S3.POSTPolicy.Error
    , ZoomHub.Config
    , ZoomHub.Config.AWS
    , ZoomHub.Config.Kinde
    , ZoomHub.Config.ProcessContent
    , ZoomHub.Config.Uploads
    , ZoomHub.Debug
    , ZoomHub.Email
    , ZoomHub.Email.Verification
    , ZoomHub.Log.Logger
    , ZoomHub.Log.LogLevel
    , ZoomHub.Log.RequestLogger
    , ZoomHub.Servant.RequiredQueryParam
    , ZoomHub.Storage.PostgreSQL
    , ZoomHub.Storage.PostgreSQL.ConnectInfo
    , ZoomHub.Storage.PostgreSQL.GetRecent
    , ZoomHub.Storage.PostgreSQL.Internal
    , ZoomHub.Storage.PostgreSQL.Schema
    , ZoomHub.Storage.PostgreSQL.Schema.Schema0
    , ZoomHub.Storage.PostgreSQL.Schema.Schema1
    , ZoomHub.Storage.PostgreSQL.Schema.Schema2
    , ZoomHub.Storage.PostgreSQL.Schema.Schema3
    , ZoomHub.Storage.PostgreSQL.Schema.Schema4
    , ZoomHub.Storage.PostgreSQL.Schema.Schema5
    , ZoomHub.Types.APIUser
    , ZoomHub.Types.BaseURI
    , ZoomHub.Types.Content
    , ZoomHub.Types.Content.Internal
    , ZoomHub.Types.ContentBaseURI
    , ZoomHub.Types.ContentId
    , ZoomHub.Types.ContentMIME
    , ZoomHub.Types.ContentState
    , ZoomHub.Types.ContentType
    , ZoomHub.Types.ContentURI
    , ZoomHub.Types.DeepZoomImage
    , ZoomHub.Types.DeepZoomImage.TileFormat
    , ZoomHub.Types.DeepZoomImage.TileOverlap
    , ZoomHub.Types.DeepZoomImage.TileSize
    , ZoomHub.Types.Environment
    , ZoomHub.Types.StaticBaseURI
    , ZoomHub.Types.VerificationError
    , ZoomHub.Types.VerificationToken
    , ZoomHub.Utils
    , ZoomHub.Web.Errors
    , ZoomHub.Web.Main
    , ZoomHub.Web.MainDevelopment
    , ZoomHub.Web.Page
    , ZoomHub.Web.Page.EmbedContent
    , ZoomHub.Web.Page.ExploreRecentContent
    , ZoomHub.Web.Page.Homepage
    , ZoomHub.Web.Page.VerifyContent
    , ZoomHub.Web.Page.ViewContent
    , ZoomHub.Web.Static
    , ZoomHub.Web.Types.Embed
    , ZoomHub.Web.Types.EmbedAspectRatio
    , ZoomHub.Web.Types.EmbedBackground
    , ZoomHub.Web.Types.EmbedBorder
    , ZoomHub.Web.Types.EmbedConstraint
    , ZoomHub.Web.Types.EmbedDimension
    , ZoomHub.Web.Types.EmbedId
    , ZoomHub.Web.Types.EmbedObjectFit
    , ZoomHub.Web.Types.OpenSeadragonTileSource
    , ZoomHub.Web.Types.OpenSeadragonViewerConfig
    , ZoomHub.Worker
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  build-depends:
      base
    , aeson
    , aeson-casing
    , aeson-pretty
    , amazonka
    , amazonka-core
    , amazonka-lambda
    , amazonka-s3
    , amazonka-ses
    , async
    , atomic-write
    , base64
    , binary
    , blaze-builder
    , bytestring
    , case-insensitive
    , conduit
    , containers
    , crypton
    , data-default
    , directory
    , enclosed-exceptions
    , envy
    , exceptions
    , fast-logger
    , filepath
    , flow
    , foreign-store
    , generics-sop
    , hashids
    , hoauth2
    , hostname
    , http-api-data
    , http-client
    , http-media
    , http-types
    , iproute
    , lens
    , lens-aeson
    , lucid
    , mime
    , monad-control
    , mtl
    , neat-interpolation
    , network
    , network-uri
    , postgresql-simple
    , process
    , product-profunctors
    , random
    , raw-strings-qq
    , resource-pool
    , retry
    , safe
    , safe-exceptions
    , say
    , servant
    , servant-auth
    , servant-auth-server
    , servant-lucid
    , servant-server
    , split
    , squeal-postgresql
    , string-conversions
    , temporary
    , text
    , time
    , time-units
    , timeit
    , transformers
    , transformers-base
    , unix
    , unliftio
    , unordered-containers
    , uri-bytestring
    , uri-encode
    , utf8-string
    , uuid
    , wai
    , wai-app-static
    , wai-cors
    , wai-extra
    , warp
    , wreq
    , xml

executable zoomhub
  default-language: Haskell2010
  ghc-options:      -Wall
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
      base
    , zoomhub

executable migrate-database
  default-language: Haskell2010
  ghc-options:      -Wall -main-is MigrateDatabase
  main-is:          MigrateDatabase.hs
  hs-source-dirs:   app
  build-depends:
      base
    , zoomhub
    , bytestring
    , squeal-postgresql

test-suite tests
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   tests
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  other-modules:
    ZoomHub.API.Types.ContentCompletionSpec
    ZoomHub.APISpec
    ZoomHub.AWSSpec
    ZoomHub.Storage.PostgreSQLSpec
    ZoomHub.Types.ContentIdSpec
    ZoomHub.Types.ContentURISpec
    ZoomHub.Types.DeepZoomImageSpec
  build-depends:
      base
    , aeson
    , amazonka
    , amazonka-core
    , amazonka-s3
    , base64
    , bytestring
    , generics-sop
    , hspec == 2.*
    , hspec-wai
    , http-types
    , network-uri
    , postgresql-simple
    , process
    , QuickCheck
    , quickcheck-instances
    , raw-strings-qq
    , resource-pool
    , servant-server
    , squeal-postgresql
    , text
    , time
    , time-units
    , wai
    , zoomhub
